--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,11 +1,12 @@
-baseURL = "https://example.com"
-languageCode = "en"
-DefaultContentLanguage = "en"
-title = "Website of Jane Doe"
+baseURL = "https://httrksk.github.io/"
+languageCode = "ja-jp"
+title = "Keisuke Hattori"
 theme = "anatole"
 summarylength = 10
 enableEmoji = true
 enableRobotsTXT = true
+canonifyurls = true
+publishDir = "docs"
 
 # Enable Disqus
 #disqusShortname = ""
