--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -5,9 +5,8 @@ LanguageName = "EN"
 contentDir = "content/english"
 
 [ar]
-title = "فلانة الفلانية"
+title = "服部 圭介"
 description = "أنا أعمل كمطورة ويب في شركة س"
 contentDir = "content/arabic" 
 weight = 2
-LanguageDirection = "rtl" 
 LanguageName = "AR"
