--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,7 +1,7 @@
 [en]
 title = "Keisuke Hattori"
 weight = 1
-LanguageName = "ENGLICSH"
+LanguageName = "Eng"
 contentDir = "content/english"
 
 [jp]
