--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -58,6 +58,6 @@ title = "Research Gate"
 url = "https://www.researchgate.net/profile/Keisuke-Hattori-2"
 
 [[socialIcons]]
-icon = "fas fa-pen-square"
+icon = "fas fa-file"
 title = "Note"
 url = "https://note.com/hattorizemi"
