--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -14,6 +14,7 @@ favicon = "favicons/"
 customCss = ["css/custom.css"]
 # example ["js/custom.js"]
 customJs = [] 
+# mainSections = ["post"]
 mainSections = ["post"]
 images = ["images/site-feature-image.png"]
 doNotLoadAnimations = false
