--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://httrksk.github.io/"
 languageCode = "ja-jp"
 title = "Keisuke Hattori"
 theme = "anatole"
-summarylength = 5
+summaryLength = 50
 enableEmoji = true
 enableRobotsTXT = true
 canonifyurls = true
