--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -59,6 +59,11 @@ title = "Research Gate"
 url = "https://www.researchgate.net/profile/Keisuke-Hattori-2"
 
 [[socialIcons]]
+icon = "fas fa-graduation-cap"
+title = "Google Scholar"
+url = "https://scholar.google.co.jp/citations?user=BQJqs3kAAAAJ&hl=ja"
+
+[[socialIcons]]
 icon = "fas fa-file"
 title = "Note"
 url = "https://note.com/hattorizemi"
