--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ author = "Keisuke Hattori"
 #disqusShortname = ""
 
 # Google Analytics
-googleAnalytics = "UA-798651-12"
+googleAnalytics = "G-N4EYQRJ4R7"
 
 # Syntax highlighting
 pygmentsUseClasses = true   
